# rasciify

./: .pre-commit-config.yaml  Cargo.toml  License  README.md  build.rs
assets/fonts/monotty/: OFL.txt
docs/: character.md  usage.md
src/: character.rs  gif_to_gif.rs  img_to_img.rs  img_to_text.rs  lib.rs  main.rs  symbols.rs  types.rs
src/utils/: font.rs  mod.rs  utils.rs
