[package]
name = "rasciify"
version = "0.1.0"
edition = "2021"
authors = ["Goh Yu Han <gohyuhan123456@gmail.com>"]

description = "For generating ASCII art ( RGB/grayscale image or text based ) based on image provided."
license = "MIT"
repository = "https://github.com/gohyuhan/rasciify"
documentation = "https://github.com/gohyuhan/rasciify/blob/main/docs/usage.md"
categories = ["image", "image_processing"]
keywords = ["image", "ascii-art", "ascii", "image-processing", "rgb", "grayscale", "text-based", "image-to-ascii", "image-to-text", "ascii-art-generator"]

[dependencies]
ab_glyph = "0.2.29"
image = "0.25.5"
imageproc = "0.25.0"
rusttype = "0.9.3"
