[package]
name = "rasciify"
version = "0.1.1"
edition = "2021"
authors = ["Goh Yu Han <gohyuhan123456@gmail.com>"]

description = "For generating ASCII art ( RGB/grayscale image or text based ) based on image provided."
license = "MIT"
repository = "https://github.com/gohyuhan/rasciify"
documentation = "https://github.com/gohyuhan/rasciify/blob/main/docs/usage.md"
keywords = ["image", "ascii", "image-processing", "ascii-art-generator"]

exclude = [
    "assets/fonts"
]

build = "build.rs"

[dependencies]
ab_glyph = "0.2.29"
image = "0.25.5"
imageproc = "0.25.0"
rusttype = "0.9.3"

[build-dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
sha2 = "0.10.8"
zip = "2.2.2"