[package]
name = "rasciify"
version = "0.2.2"
edition = "2021"
authors = ["Goh Yu Han <gohyuhan123456@gmail.com>"]

description = "For generating ASCII art ( RGB/grayscale image, text based or GIF ) based on image or GIF provided."
license = "MIT"
repository = "https://github.com/gohyuhan/rasciify"
documentation = "https://github.com/gohyuhan/rasciify/blob/main/docs/usage.md"
keywords = ["image", "ascii", "image-processing", "ascii-art-generator"]
exclude = ["examples/", ".pre-commit-config.yaml"]

[dependencies]
ab_glyph = "0.2.29"
gif = "0.13.1"
image = "0.25.5"
imageproc = "0.25.0"
rayon = "1.10.0"
rusttype = "0.9.3"
